added Flask app

--- a/cs221_project_secondary_analysis.ipynb
+++ b/cs221_project_secondary_analysis.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "waiting-grain",
+   "execution_count": 1,
+   "id": "filled-inflation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">Taxonomy loaded in </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">6.35</span><span style=\"color: #008000; text-decoration-color: #008000\"> seconds.</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[32mTaxonomy loaded in \u001b[0m\u001b[1;32m6.35\u001b[0m\u001b[32m seconds.\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -65,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exciting-classic",
+   "id": "interesting-exclusion",
    "metadata": {},
    "source": [
     "# Exploring Size and Shape of BRENDA Data"
@@ -74,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "third-jungle",
+   "id": "political-journal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "empirical-declaration",
+   "id": "appropriate-pension",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "mexican-charlotte",
+   "id": "normal-experiment",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "specialized-image",
+   "id": "virgin-nevada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "knowing-running",
+   "id": "active-inquiry",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "loose-native",
+   "id": "spiritual-deputy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-request",
+   "id": "worldwide-departure",
    "metadata": {},
    "source": [
     "## Sparsity"
@@ -178,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "inside-grocery",
+   "id": "economic-cartoon",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "attractive-cradle",
+   "id": "ordinary-seeking",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "endangered-verse",
+   "id": "sitting-arkansas",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "stock-weather",
+   "id": "enhanced-vector",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capital-karma",
+   "id": "destroyed-property",
    "metadata": {},
    "source": [
     "## Let's try Pfams as an abstraction here"
@@ -370,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "identified-karma",
+   "id": "recorded-jimmy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "hidden-greene",
+   "id": "cardiac-occupation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "numerical-outside",
+   "id": "found-forge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "designing-station",
+   "id": "british-mount",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "young-ancient",
+   "id": "secret-beaver",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "continent-throat",
+   "id": "serial-plaintiff",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "mighty-logic",
+   "id": "promising-alberta",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "unauthorized-income",
+   "id": "adopted-persian",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "searching-cover",
+   "id": "recreational-dream",
    "metadata": {},
    "source": [
     "# Could we Help with Sparsity through Embedding?"
@@ -633,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fifty-timothy",
+   "id": "latin-manner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "acting-circle",
+   "id": "intensive-disorder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "instructional-regulation",
+   "id": "employed-oasis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "competent-freight",
+   "id": "acquired-insurance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "owned-cycle",
+   "id": "willing-questionnaire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "reverse-burton",
+   "id": "human-carroll",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "considered-luxury",
+   "id": "remarkable-graphic",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "angry-navigator",
+   "id": "steady-indonesian",
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "stock-arena",
+   "id": "weekly-finding",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "according-nirvana",
+   "id": "yellow-treasure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "naval-jumping",
+   "id": "valid-mapping",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unlike-taiwan",
+   "id": "advanced-compromise",
    "metadata": {},
    "source": [
     "# This would imply that this embedding explains 99% of the variance, does that even seem reasonable?\n",
@@ -1162,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "acting-class",
+   "id": "qualified-operator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "japanese-messaging",
+   "id": "above-series",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "romance-reach",
+   "id": "loose-nation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "southwest-think",
+   "id": "logical-trail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "motivated-parking",
+   "id": "cathedral-extra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "urban-memorial",
+   "id": "loaded-ceramic",
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "unique-sunglasses",
+   "id": "early-planner",
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "widespread-cornwall",
+   "id": "complicated-replacement",
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focal-distribution",
+   "id": "sapphire-mediterranean",
    "metadata": {},
    "source": [
     "# Let's Explore a Baseline Using PFAMs and CIDs"
@@ -1634,7 +1648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "objective-scott",
+   "id": "familiar-bradley",
    "metadata": {},
    "source": [
     "## Create Dropout DatFrame"
@@ -1643,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "living-placement",
+   "id": "quarterly-mouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "terminal-fabric",
+   "id": "noticed-senate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "tough-handy",
+   "id": "political-concentration",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "military-karaoke",
+   "id": "separated-sunrise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "incoming-battle",
+   "id": "sudden-tragedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genetic-religious",
+   "id": "skilled-concord",
    "metadata": {},
    "source": [
     "## Create Similarity Matrix (Pairwise) Using Cosine Sim and Morgan Fingerprints"
@@ -1719,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "worldwide-water",
+   "id": "floppy-baptist",
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "built-fossil",
+   "id": "extended-motel",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acute-spirit",
+   "id": "accredited-salem",
    "metadata": {},
    "source": [
     "## Score how useful this matrix is by using it to find the Pfams for dropouts"
@@ -1782,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "interior-blend",
+   "id": "preceding-addition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1792,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "vietnamese-representative",
+   "id": "engaging-diabetes",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "funded-reward",
+   "id": "dental-checkout",
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subjective-chester",
+   "id": "micro-pizza",
    "metadata": {},
    "source": [
     "## Score the Results"
@@ -2018,7 +2032,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "completed-printing",
+   "id": "connected-louis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2046,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "robust-virgin",
+   "id": "crude-table",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2056,7 +2070,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "alternate-indonesian",
+   "id": "protected-workplace",
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +2093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-syndrome",
+   "id": "stock-poultry",
    "metadata": {},
    "source": [
     "# Try Basic Collaborative Filtering"
@@ -2088,7 +2102,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "pretty-dollar",
+   "id": "stuffed-invalid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "exceptional-teach",
+   "id": "emotional-pierre",
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "immune-conditions",
+   "id": "understood-commerce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2272,7 +2286,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "elder-quebec",
+   "id": "qualified-basis",
    "metadata": {},
    "outputs": [
     {
@@ -2482,7 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "excess-sociology",
+   "id": "soviet-orientation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2492,7 +2506,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "criminal-charleston",
+   "id": "generic-owner",
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-rolling",
+   "id": "selective-maryland",
    "metadata": {},
    "source": [
     "# Try Tanimoto"
@@ -2524,7 +2538,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "sharing-constitution",
+   "id": "varied-teaching",
    "metadata": {},
    "outputs": [
     {
@@ -2545,7 +2559,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "laden-yesterday",
+   "id": "alternative-subscriber",
    "metadata": {},
    "outputs": [
     {
@@ -2581,7 +2595,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "beginning-comment",
+   "id": "wound-interim",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2593,7 +2607,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "clear-curve",
+   "id": "hired-coordinate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2603,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "mechanical-mailing",
+   "id": "martial-certificate",
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seeing-bryan",
+   "id": "cheap-cleveland",
    "metadata": {},
    "source": [
     "# Try Mol2Vec"
@@ -2635,7 +2649,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "golden-semester",
+   "id": "biological-shepherd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2645,7 +2659,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "measured-pathology",
+   "id": "medical-prior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2655,7 +2669,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "celtic-railway",
+   "id": "changing-mixture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2665,7 +2679,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "departmental-springfield",
+   "id": "threatened-carter",
    "metadata": {},
    "outputs": [
     {
@@ -2689,7 +2703,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "sitting-literature",
+   "id": "robust-graduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2699,7 +2713,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "activated-classification",
+   "id": "hearing-adjustment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2709,7 +2723,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "bulgarian-wright",
+   "id": "banner-virgin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2719,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "worth-determination",
+   "id": "german-nevada",
    "metadata": {},
    "outputs": [
     {
@@ -2738,7 +2752,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "reserved-piano",
+   "id": "secondary-stable",
    "metadata": {},
    "outputs": [
     {
@@ -3092,7 +3106,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "extended-family",
+   "id": "heavy-luxembourg",
    "metadata": {},
    "outputs": [
     {
@@ -3128,7 +3142,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "verbal-thread",
+   "id": "bacterial-oklahoma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3140,7 +3154,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "august-selling",
+   "id": "going-transport",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3150,7 +3164,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "overall-pattern",
+   "id": "polish-detective",
    "metadata": {},
    "outputs": [
     {
@@ -3174,7 +3188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "separate-academy",
+   "id": "simplified-impact",
    "metadata": {},
    "outputs": [],
    "source": []
